--- a/public/ssid.html
+++ b/public/ssid.html
@@ -5,36 +5,72 @@
   <title>รายละเอียด SSID</title>
   <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/chartjs-adapter-date-fns"></script>
+  <script src="https://cdn.jsdelivr.net/npm/chartjs-plugin-zoom@2.0.1/dist/chartjs-plugin-zoom.min.js"></script>
   <style>
-    body {
+    html, body {
+      margin: 0;
+      padding: 0;
+      height: 100%;
+      width: 100%;
       font-family: sans-serif;
       background: #f9f9f9;
+    }
+
+    #container {
+      display: flex;
+      flex-direction: column;
+      height: 100vh;
+      width: 100vw;
+      box-sizing: border-box;
       padding: 20px;
     }
-    canvas {
-      background: white;
-      padding: 10px;
-      border-radius: 8px;
-      margin-bottom: 30px;
-      box-shadow: 0 0 10px rgba(0,0,0,0.1);
-    }
+
     h2 {
-      margin-bottom: 10px;
+      margin: 0 0 10px;
+      text-align: center;
     }
+
     a {
-      display: inline-block;
+      display: block;
       margin-bottom: 20px;
       color: #007bff;
       text-decoration: none;
+      text-align: center;
+    }
+
+    #combinedChart {
+      flex-grow: 1;
+      width: 100%;
+      background: white;
+      padding: 10px;
+      border-radius: 8px;
+      box-shadow: 0 0 10px rgba(0,0,0,0.1);
+    }
+
+    #resetZoomBtn {
+      margin: 10px auto 0;
+      padding: 8px 16px;
+      font-size: 14px;
+      background-color: #007bff;
+      color: white;
+      border: none;
+      border-radius: 6px;
+      cursor: pointer;
+    }
+
+    #resetZoomBtn:hover {
+      background-color: #0056b3;
     }
   </style>
 </head>
 <body>
-  <h2 id="title">รายละเอียด SSID</h2>
-  <a href="/index.html">⬅ กลับไปหน้าหลัก</a>
+  <div id="container">
+    <h2 id="title">รายละเอียด SSID</h2>
+    <a href="/index.html">⬅ กลับไปหน้าหลัก</a>
 
-  <canvas id="signalChart" height="300"></canvas>
-  <canvas id="qualityChart" height="300"></canvas>
+    <canvas id="combinedChart"></canvas>
+    <button id="resetZoomBtn" onclick="resetZoom()">🔄 รีเซ็ตการซูม</button>
+  </div>
 
   <script>
     const urlParams = new URLSearchParams(window.location.search);
@@ -46,10 +82,12 @@
 
     document.getElementById('title').textContent = `📡 รายละเอียด: ${ssid}`;
 
-    const signalCtx = document.getElementById('signalChart').getContext('2d');
-    const qualityCtx = document.getElementById('qualityChart').getContext('2d');
+    const ctx = document.getElementById('combinedChart').getContext('2d');
+    let combinedChart;
 
-    let signalChart, qualityChart;
+    function resetZoom() {
+      if (combinedChart) combinedChart.resetZoom();
+    }
 
     async function loadData() {
       const res = await fetch('/api/realtime');
@@ -68,71 +106,92 @@
         y: d.quality
       }));
 
-      if (signalChart) signalChart.destroy();
-      if (qualityChart) qualityChart.destroy();
+      if (combinedChart) combinedChart.destroy();
 
-      const commonOptions = {
-        responsive: true,
-        animation: false,
-        interaction: { mode: 'nearest', intersect: false },
-        scales: {
-          x: {
-            type: 'time',
-            time: { unit: 'minute', tooltipFormat: 'HH:mm:ss' },
-            title: { display: true, text: 'เวลา' }
-          },
-          y: {
-            beginAtZero: false
-          }
-        },
-        plugins: {
-          legend: { display: false }
-        }
-      };
-
-      signalChart = new Chart(signalCtx, {
+      combinedChart = new Chart(ctx, {
         type: 'line',
         data: {
-          datasets: [{
-            label: 'Signal Level (dBm)',
-            data: signalData,
-            borderColor: 'blue',
-            tension: 0.3
-          }]
+          datasets: [
+            {
+              label: 'Signal Level (dBm)',
+              data: signalData,
+              borderColor: 'blue',
+              yAxisID: 'ySignal',
+              tension: 0.3
+            },
+            {
+              label: 'Quality (%)',
+              data: qualityData,
+              borderColor: 'green',
+              yAxisID: 'yQuality',
+              tension: 0.3
+            }
+          ]
         },
         options: {
-          ...commonOptions,
+          responsive: true,
+          maintainAspectRatio: false,
+          animation: false,
+          interaction: {
+            mode: 'index',
+            intersect: false
+          },
+          plugins: {
+            legend: { position: 'bottom' },
+            zoom: {
+              pan: {
+                enabled: true,
+                mode: 'x'
+              },
+              zoom: {
+                wheel: { enabled: true },
+                pinch: { enabled: true },
+                mode: 'x'
+              }
+            },
+            tooltip: {
+              mode: 'index',
+              intersect: false,
+              callbacks: {
+                label: function (context) {
+                  const time = new Date(context.parsed.x).toLocaleTimeString("th-TH", {
+                    hour: "2-digit",
+                    minute: "2-digit",
+                    second: "2-digit"
+                  });
+                  return `${context.dataset.label}: ${context.parsed.y} (เวลา ${time})`;
+                }
+              }
+            }
+          },
           scales: {
-            ...commonOptions.scales,
-            y: {
-              ...commonOptions.scales.y,
+            x: {
+              type: 'time',
+              grid: {
+                drawOnChartArea: true
+              },
+              time: {
+                unit: 'minute',
+                tooltipFormat: 'HH:mm:ss',
+                displayFormats: {
+                  minute: 'HH:mm',
+                  hour: 'HH:mm'
+                }
+              },
+              title: { display: true, text: 'เวลา' }
+            },
+            ySignal: {
+              position: 'left',
               suggestedMin: -100,
               suggestedMax: 0,
               title: { display: true, text: 'Signal (dBm)' }
-            }
-          }
-        }
-      });
-
-      qualityChart = new Chart(qualityCtx, {
-        type: 'line',
-        data: {
-          datasets: [{
-            label: 'Quality (%)',
-            data: qualityData,
-            borderColor: 'green',
-            tension: 0.3
-          }]
-        },
-        options: {
-          ...commonOptions,
-          scales: {
-            ...commonOptions.scales,
-            y: {
-              ...commonOptions.scales.y,
+            },
+            yQuality: {
+              position: 'right',
               suggestedMin: 0,
               suggestedMax: 100,
-              title: { display: true, text: 'Quality (%)' }
+              title: { display: true, text: 'Quality (%)' },
+              grid: { drawOnChartArea: false }
             }
           }
         }
@@ -140,7 +199,7 @@
     }
 
     loadData();
-    setInterval(loadData, 5000); // refresh every 5s
+    setInterval(loadData, 5000);
   </script>
 </body>
 </html>
